--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess Number</title>
+    <meta name="description" content="HTML JavaScipt DOM">
+    <style>
+        @import url('./style.css');
+    </style>
+    <title>HTML JavaScipt DOM</title>
 </head>
 <body>
+    <main>
+
+    </main>
     
-    <div>
-        <label for="guessNumber">Pls! Put a number between 0 - 100</label>
-        <input type="text" name="guessNumber" id="inputNumber">
-        <button onclick="guess()">Guess!</button>
-    </div>
-
-
     <script src="./app.js"></script>
 </body>
 </html>
